# VoronoiDiscretFB

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
